SET( PLUGIN_NAME LayoutTransitionPlugin )


SET( CPP_FILES ${CPP_FILES} 
  layouttransitionplugin.cpp
)

ADD_LIBRARY(${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} SHARED ${CPP_FILES} )

TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} ${TULIP_LIBRARY} ${PTBLAS} ${ATLAS} ${CORE_LIBS})

INSTALL( TARGETS ${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION}
  LIBRARY DESTINATION ${TULIP_PLUGINS_PATH}
)
